[CNFT1-2088] Spring Boot 3.2 upgrade (#1242)
* Spring Boot 3.2

---------

Co-authored-by: Michael Peels <michaelpeels@Michael-Peels-Work-6.local>